[tool.poetry]
name = "asgi-request-id"
version = "0.1.0"
description = "ASGI request id middleware"
authors = ["Arni Inaba Kjartansson <arni@inaba.is>"]
license = "MIT"
repository = "https://github.com/arni-inaba/asgi-request-id"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"
pytest = "^5.2"
starlette = "^0.12.10"
uvicorn = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
