[tool.poetry]
name = "asgi-request-id"
version = "0.2.1"
description = "ASGI request id middleware"
authors = ["Arni Inaba Kjartansson <arni@inaba.is>"]
maintainers = ["Fabio Greco <fabio.greco.github@gmail.com>"]
license = "MIT"
repository = "https://github.com/arni-inaba/asgi-request-id"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
