[tool.poetry]
name = "asgi-request-id"
version = "1.0.0"
description = "ASGI request id middleware"
authors = ["Arni Inaba Kjartansson <arni@inaba.is>", "Fabio Greco <fabio.greco.github@gmail.com>"]
maintainers = ["Arni Inaba Kjartansson <arni@inaba.is>", "Fabio Greco <fabio.greco.github@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arni-inaba/asgi-request-id"
repository = "https://github.com/arni-inaba/asgi-request-id"
keywords = [
    "asgi",
    "async",
    "connexion",
    "fastapi",
    "middleware",
    "request-id",
    "starlette",
    "x-request-id",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: FastAPI',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development',
    'Topic :: Utilities',
    'Typing :: Typed',
]
packages = [
    { include = "asgi_request_id" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
starlette = ">=0.45.3"

[tool.poetry.group.dev.dependencies]
httpx = "*"
pytest = "*"
pytest-asyncio = "*"
pyyaml = "*"
starlette = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
